lab/lab13/lab13.txt
Last login: Sun Jan 25 19:38:55 on ttys000
admin@MacBook-Pro-admin-2 ~ % ssh semenil@stdnserv1.srv.vizja.pl -p 6000                   
semenil@stdnserv1.srv.vizja.pl's password: 
Welcome to Ubuntu 22.04.5 LTS (GNU/Linux 5.15.0-160-generic x86_64)

 * Documentation:  https://help.ubuntu.com
 * Management:     https://landscape.canonical.com
 * Support:        https://ubuntu.com/pro

 System information as of Tue Nov 18 04:17:06 PM UTC 2025

  System load:  3.47              Processes:             430
  Usage of /:   36.4% of 1.79TB   Users logged in:       19
  Memory usage: 9%                IPv4 address for eno1: 10.0.254.250
  Swap usage:   0%

 * Strictly confined Kubernetes makes edge and IoT secure. Learn how MicroK8s
   just raised the bar for easy, resilient and secure K8s cluster deployment.

   https://ubuntu.com/engage/secure-kubernetes-at-the-edge

Expanded Security Maintenance for Applications is not enabled.

25 updates can be applied immediately.
To see these additional updates run: apt list --upgradable

Enable ESM Apps to receive additional future security updates.
See https://ubuntu.com/esm or run: sudo pro status

New release '24.04.3 LTS' available.
Run 'do-release-upgrade' to upgrade to it.


*** System restart required ***
Last login: Sun Jan 25 18:42:44 2026 from 213.134.163.94
semenil@stdnserv1:~$ g++ lab13.cpp -o lab13 -lpthread -I.
In file included from lab13.cpp:5:
semaphore.h:69:9: error: ‘sem_t’ does not name a type
   69 |         sem_t sem;
      |         ^~~~~
semaphore.h: In constructor ‘Semaphore::Semaphore(int)’:
semaphore.h:30:22: error: ‘sem’ was not declared in this scope
   30 |      if( sem_init( & sem, 0, value ) != 0 )
      |                      ^~~
semaphore.h:30:10: error: ‘sem_init’ was not declared in this scope
   30 |      if( sem_init( & sem, 0, value ) != 0 )
      |          ^~~~~~~~
semaphore.h: In destructor ‘Semaphore::~Semaphore()’:
semaphore.h:39:26: error: ‘sem’ was not declared in this scope
   39 |           sem_destroy( & sem );
      |                          ^~~
semaphore.h:39:11: error: ‘sem_destroy’ was not declared in this scope
   39 |           sem_destroy( & sem );
      |           ^~~~~~~~~~~
semaphore.h: In member function ‘void Semaphore::p()’:
semaphore.h:48:22: error: ‘sem’ was not declared in this scope
   48 |      if( sem_wait( & sem ) != 0 )
      |                      ^~~
semaphore.h:48:10: error: ‘sem_wait’ was not declared in this scope
   48 |      if( sem_wait( & sem ) != 0 )
      |          ^~~~~~~~
semaphore.h: In member function ‘void Semaphore::v()’:
semaphore.h:58:22: error: ‘sem’ was not declared in this scope
   58 |      if( sem_post( & sem ) != 0 )
      |                      ^~~
semaphore.h:58:10: error: ‘sem_post’ was not declared in this scope
   58 |      if( sem_post( & sem ) != 0 )
      |          ^~~~~~~~
semenil@stdnserv1:~$ g++ lab13.cpp -o lab13 -pthread
semenil@stdnserv1:~$ ./lab13
Producer 2 produced 0 (count=1)
Consumer 3 read 0 (1/3)
Consumer 1 read 0 (2/3)
Producer 1 produced 0 (count=2)
Consumer 2 read 0 (1/3)
Producer 2 produced 1 (count=3)
Consumer 1 read 1 (1/3)
Consumer 3 read 1 (2/3)
Producer 1 produced 1 (count=4)
Consumer 2 read 1 (1/3)
Producer 2 produced 2 (count=5)
Consumer 1 read 2 (1/3)
Consumer 3 read 2 (2/3)
Producer 1 produced 2 (count=6)
Consumer 2 read 2 (1/3)
Producer 2 produced 3 (count=7)
Consumer 1 read 3 (1/3)
Consumer 3 read 3 (2/3)
Producer 1 produced 3 (count=8)
Consumer 2 read 3 (1/3)
Producer 2 produced 4 (count=9)
Consumer 1 read 4 (1/3)
Consumer 3 read 4 (2/3)
Consumer 2 read 4 (3/3)
Element 4 removed
Producer 1 produced 4 (count=9)
Consumer 1 read 4 (1/3)
Consumer 3 read 4 (2/3)
Consumer 2 read 4 (3/3)
Element 4 removed
Producer 2 produced 5 (count=9)
Consumer 1 read 5 (1/3)
Consumer 3 read 5 (2/3)
Consumer 2 read 5 (3/3)
Element 5 removed
Producer 1 produced 5 (count=9)
Consumer 1 read 5 (1/3)
Consumer 3 read 5 (2/3)
Consumer 2 read 5 (3/3)
Element 5 removed
Producer 2 produced 6 (count=9)
Consumer 1 read 6 (1/3)
Consumer 3 read 6 (2/3)
Consumer 2 read 6 (3/3)
Element 6 removed
Producer 2 produced 7 (count=9)
Consumer 1 read 7 (1/3)
Consumer 3 read 7 (2/3)
Consumer 2 read 7 (3/3)
Element 7 removed
Producer 1 produced 6 (count=9)
Consumer 1 read 6 (1/3)
Consumer 3 read 6 (2/3)
Consumer 2 read 6 (3/3)
Element 6 removed
Producer 2 produced 8 (count=9)
Consumer 1 read 8 (1/3)
Consumer 3 read 8 (2/3)
Consumer 2 read 8 (3/3)
Element 8 removed
Producer 2 produced 9 (count=9)
Consumer 1 read 9 (1/3)
Consumer 3 read 9 (2/3)
Consumer 2 read 9 (3/3)
Element 9 removed
Producer 2 produced 10 (count=9)
Consumer 1 read 10 (1/3)
Consumer 3 read 10 (2/3)
Consumer 2 read 10 (3/3)
Element 10 removed
Producer 2 produced 11 (count=9)
Consumer 1 read 11 (1/3)
Consumer 3 read 11 (2/3)
Consumer 2 read 11 (3/3)
Element 11 removed
Producer 2 produced 12 (count=9)
Consumer 1 read 12 (1/3)
Consumer 3 read 12 (2/3)
Consumer 2 read 12 (3/3)
Element 12 removed
Producer 1 produced 7 (count=9)
Consumer 1 read 7 (1/3)
Consumer 3 read 7 (2/3)
Consumer 2 read 7 (3/3)
Element 7 removed
Producer 1 produced 8 (count=9)
Consumer 1 read 8 (1/3)
Consumer 3 read 8 (2/3)
Consumer 2 read 8 (3/3)
Element 8 removed
Producer 1 produced 9 (count=9)
Consumer 1 read 9 (1/3)
Consumer 3 read 9 (2/3)
Consumer 2 read 9 (3/3)
Element 9 removed
Producer 2 produced 13 (count=9)
Consumer 1 read 13 (1/3)
Consumer 3 read 13 (2/3)
Consumer 2 read 13 (3/3)
Element 13 removed
Producer 2 produced 14 (count=9)
Consumer 1 read 14 (1/3)
Consumer 3 read 14 (2/3)
Consumer 2 read 14 (3/3)
Element 14 removed
Producer 1 produced 10 (count=9)
Consumer 1 read 10 (1/3)
Consumer 3 read 10 (2/3)
Consumer 2 read 10 (3/3)
Element 10 removed
Producer 1 produced 11 (count=9)
Consumer 1 read 11 (1/3)
Consumer 3 read 11 (2/3)
Consumer 2 read 11 (3/3)
Element 11 removed
Producer 2 produced 15 (count=9)
Consumer 1 read 15 (1/3)
Consumer 3 read 15 (2/3)
Consumer 2 read 15 (3/3)
Element 15 removed
Producer 2 produced 16 (count=9)
Consumer 1 read 16 (1/3)
Consumer 3 read 16 (2/3)
Consumer 2 read 16 (3/3)
Element 16 removed
Producer 2 produced 17 (count=9)
Consumer 1 read 17 (1/3)
Consumer 3 read 17 (2/3)
Consumer 2 read 17 (3/3)
Element 17 removed
Producer 2 produced 18 (count=9)
Consumer 1 read 18 (1/3)
Consumer 3 read 18 (2/3)
Consumer 2 read 18 (3/3)
Element 18 removed
Producer 2 produced 19 (count=9)
Consumer 1 read 19 (1/3)
Consumer 3 read 19 (2/3)
Consumer 2 read 19 (3/3)
Element 19 removed
Producer 2 produced 20 (count=9)
Consumer 1 read 20 (1/3)
Consumer 3 read 20 (2/3)
Consumer 2 read 20 (3/3)
Element 20 removed
Producer 2 produced 21 (count=9)
Consumer 1 read 21 (1/3)
Consumer 3 read 21 (2/3)
Consumer 2 read 21 (3/3)
Element 21 removed
Producer 2 produced 22 (count=9)
Consumer 1 read 22 (1/3)
Consumer 3 read 22 (2/3)
Consumer 2 read 22 (3/3)
Element 22 removed
Producer 2 produced 23 (count=9)
Consumer 1 read 23 (1/3)
Consumer 3 read 23 (2/3)
Consumer 2 read 23 (3/3)
Element 23 removed
Producer 2 produced 24 (count=9)
Consumer 1 read 24 (1/3)
Consumer 3 read 24 (2/3)
Consumer 2 read 24 (3/3)
Element 24 removed
Producer 2 produced 25 (count=9)
Consumer 1 read 25 (1/3)
Consumer 3 read 25 (2/3)
Consumer 2 read 25 (3/3)
Element 25 removed
Producer 2 produced 26 (count=9)
Consumer 1 read 26 (1/3)
Consumer 3 read 26 (2/3)
Consumer 2 read 26 (3/3)
Element 26 removed
Producer 1 produced 12 (count=9)
Consumer 1 read 12 (1/3)
Consumer 3 read 12 (2/3)
Consumer 2 read 12 (3/3)
Element 12 removed
Producer 2 produced 27 (count=9)
Consumer 1 read 27 (1/3)
Consumer 3 read 27 (2/3)
Consumer 2 read 27 (3/3)
Element 27 removed
Producer 2 produced 28 (count=9)
Consumer 1 read 28 (1/3)
Consumer 3 read 28 (2/3)
Consumer 2 read 28 (3/3)
Element 28 removed
Producer 2 produced 29 (count=9)
Consumer 1 read 29 (1/3)
Consumer 3 read 29 (2/3)
Consumer 2 read 29 (3/3)
Element 29 removed
Producer 1 produced 13 (count=9)
Consumer 1 read 13 (1/3)
Consumer 3 read 13 (2/3)
Consumer 2 read 13 (3/3)
Element 13 removed
Producer 1 produced 14 (count=9)
Consumer 1 read 14 (1/3)
Consumer 3 read 14 (2/3)
Consumer 2 read 14 (3/3)
Element 14 removed
Producer 1 produced 15 (count=9)
Consumer 1 read 15 (1/3)
Consumer 3 read 15 (2/3)
Consumer 2 read 15 (3/3)
Element 15 removed
Producer 2 produced 30 (count=9)
Consumer 1 read 30 (1/3)
Consumer 3 read 30 (2/3)
Consumer 2 read 30 (3/3)
Element 30 removed
Producer 2 produced 31 (count=9)
Consumer 1 read 31 (1/3)
Consumer 3 read 31 (2/3)
Consumer 2 read 31 (3/3)
Element 31 removed
Producer 2 produced 32 (count=9)
Consumer 1 read 32 (1/3)
Consumer 3 read 32 (2/3)
Consumer 2 read 32 (3/3)
Element 32 removed
Producer 1 produced 16 (count=9)
Consumer 1 read 16 (1/3)
Consumer 3 read 16 (2/3)
Consumer 2 read 16 (3/3)
Element 16 removed
Producer 1 produced 17 (count=9)
Consumer 1 read 17 (1/3)
Consumer 3 read 17 (2/3)
Consumer 2 read 17 (3/3)
Element 17 removed
Producer 1 produced 18 (count=9)

